RESOLVED FIXED55528
WKPluginSiteDataManagerClearAllSiteData is not working
https://bugs.webkit.org/show_bug.cgi?id=55528
Summary WKPluginSiteDataManagerClearAllSiteData is not working
Anders Carlsson
Reported 2011-03-01 16:44:17 PST
WKPluginSiteDataManagerClearAllSiteData is not working
Attachments
Patch (2.42 KB, patch)
2011-03-01 16:45 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-03-01 16:45:57 PST
Anders Carlsson
Comment 2 2011-03-01 16:56:55 PST
Note You need to log in before you can comment on or make changes to this bug.